--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.86.0",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.555.0",
     "next": "16.0.6",
     "qrcode": "^1.5.4",
