--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "express": "^5.2.1",
     "groq-sdk": "^0.37.0",
     "multer": "^2.0.2",
+    "razorpay": "^2.9.6",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0"
