--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.7",
     "qrcode": "^1.5.4",
+    "qrcode.react": "^4.2.0",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
